# dectalk-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
src/: dectalk.rs  main.rs  voice_allocator.rs  voice_manager.rs
